--- a/java/pom.xml
+++ b/java/pom.xml
@@ -74,7 +74,7 @@
         <maven-dependency-plugin.version>3.2.0</maven-dependency-plugin.version>
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
         <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
-        <powsybl-dependencies.version>1.3.0</powsybl-dependencies.version>
+        <powsybl-dependencies.version>1.4.0-SNAPSHOT</powsybl-dependencies.version>
     </properties>
 
     <build>
@@ -258,6 +258,10 @@
         <dependency>
             <groupId>com.powsybl</groupId>
             <artifactId>powsybl-iidm-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.powsybl</groupId>
+            <artifactId>powsybl-iidm-extensions</artifactId>
         </dependency>
         <dependency>
             <groupId>com.powsybl</groupId>
